fix low mselect click on mobile causes window to scroll up

--- a/ui/common/css/abstract/_mixins.scss
+++ b/ui/common/css/abstract/_mixins.scss
@@ -36,6 +36,13 @@
   }
 }
 
+@mixin hide {
+  display: none;
+  .blind_mode & {
+    display: inherit;
+  }
+}
+
 @mixin crosstable-large {
   .crosstable__users { flex: 7 1 auto; }
 }
